# mam4xx

./: .gitignore  .gitmodules  404.html  AUTHORS  CMakeLists.txt  LICENSE  README.md  build-haero.sh  build.sh  codecov.yml  index.html  mkdocs.yml  setup
ext/: CMakeLists.txt
src/: CMakeLists.txt  aero_config.hpp  aero_modes.hpp  calcsize.hpp  conversions.hpp  gasaerexch.hpp  gasaerexch_soaexch.hpp  kerminen2002.hpp  kohler.cpp  kohler.hpp  mam4.hpp  mam4.hpp.in  mam4_haero_config.hpp  mam4_types.hpp  merikanto2007.hpp  mode_dry_particle_size.hpp  mode_hygroscopicity.hpp  mode_wet_particle_size.hpp  nucleation.hpp  vehkamaki2002.hpp  wang2008.hpp
src/mam4xx/: CMakeLists.txt  aer_rad_props.hpp  aero_config.hpp  aero_config.hpp.in  aero_model.hpp  aero_model_emissions.hpp  aero_model_mjs.hpp  aero_model_od.hpp  aero_modes.cpp  aero_modes.hpp  aero_process.hpp  aero_rad_props.hpp  aero_species.hpp  aero_utils.hpp  aging.hpp  atmosphere.hpp  calcsize.hpp  calcsize_sub.hpp  coagulation.hpp  compute_o3_column_density.hpp  compute_q_tendencies.dot  config.hpp.in  constants.hpp  conversions.hpp  convproc.hpp  data_deps.md  diagnostic_arrays.hpp  drydep.hpp  floating_point.hpp  gas_chem.hpp  gas_chem_mechanism.hpp  gas_phase_chemistry.hpp  gas_species.hpp  gasaerexch.hpp  gasaerexch_soaexch.hpp  generated_gas_chem.hpp  hetfrz.hpp  hetfzr.hpp  kerminen2002.hpp  kohler.hpp  (+47 more)
src/tests/: CMakeLists.txt  aero_config_unit_tests.cpp  aero_modes_tests.cpp  atmosphere_init.cpp  atmosphere_init.hpp  atmosphere_utils.cpp  atmosphere_utils.hpp  conversions_unit_tests.cpp  kohler_unit_tests.cpp  kohler_verification.cpp  kohler_verification.hpp  mam4_aero_emissions_unit_tests.cpp  mam4_aging_unit_tests.cpp  mam4_amicphys_1gridcell.cpp  mam4_calcsize_sub_unit_tests.cpp  mam4_calcsize_unit_tests.cpp  mam4_coagulation_unit_tests.cpp  mam4_convproc_unit_tests.cpp  mam4_dry_deposition_unit_tests.cpp  mam4_gasaerexch_unit_tests.cpp  mam4_gaschem_unit_tests.cpp  mam4_hetfrz_unit_tests.cpp  mam4_hetfzr_unit_tests.cpp  mam4_kohler_unit_tests.cpp  mam4_mo_setsox_unit_tests.cpp  mam4_ndrop_unit_tests.cpp  mam4_nucleate_ice_unit_tests.cpp  mam4_nucleation_unit_tests.cpp  mam4_photo_setcol.cpp  mam4_rename_unit_tests.cpp  mam4_spitfire_transport_unit_tests.cpp  mam4_srf_emissions_unit_tests.cpp  mam4_test_config.hpp  mam4_test_config.hpp.in  mam4_wet_deposition_unit_tests.cpp  mode_averages_unit_tests.cpp  ndrop_unit_tests.cpp  testing.cpp  testing.hpp  utils_unit_tests.cpp
src/tests/data/: mm_kohler_roots.txt
src/validation/: CMakeLists.txt  aero_process.hpp  bfbhash.hpp  d.diff  files.txt  mo_chm_diags.hpp  util.sh  validation.cpp  validation.hpp
src/validation/aero_emissions/: CMakeLists.txt  aero_emissions_driver.cpp  aero_emissions_smoketest.cpp  calc_om_seasalt.cpp  calculate_seasalt_numflux_in_bins.cpp  dust_emis.cpp  marine_organic_emis.cpp  marine_organic_massflx_calc.cpp  marine_organic_numflx_calc.cpp  seasalt_emis.cpp  seasalt_emisflx_calc_massflx.cpp  seasalt_emisflx_calc_numflx.cpp
src/validation/aero_model/: CMakeLists.txt  aero_model_calcsize_water_uptake_dr.cpp  aero_model_driver.cpp  aero_model_wetdep.cpp  calc_1_impact_rate.cpp  mam4xx_aero_model_wetdep_ts_cxx_baseline.py  modal_aero_bcscavcoef_get.cpp  modal_aero_bcscavcoef_init.cpp
src/validation/aerosol_optics/: CMakeLists.txt  aer_rad_props_lw.cpp  aer_rad_props_sw.cpp  aero_rad_props_lw.cpp  aero_rad_props_sw.cpp  aerosol_optics_driver.cpp  binterp.cpp  calc_diag_spec.cpp  calc_parameterized.cpp  calc_refin_complex.cpp  calc_volc_ext.cpp  data_transfer_state_q_qqwc_to_prog.cpp  modal_aero_lw.cpp  modal_aero_sw.cpp  modal_size_parameters.cpp  update_aod_spec.cpp  volcanic_cmip_sw.cpp
src/validation/aging/: CMakeLists.txt  aging_driver.cpp  mam_pcarbon_aging_1box.cpp  mam_pcarbon_aging_1subarea.cpp  mam_pcarbon_aging_frac.cpp  transfer_aged_pcarbon_to_accum.cpp  transfer_cond_coag_mass_to_accum.cpp
src/validation/calcsize/: CMakeLists.txt  adjust_num_sizes.cpp  aitken_accum_exchange.cpp  calcsize_driver.cpp  compute_dry_volume.cpp  compute_tendencies.cpp  get_relaxed_v2n_limits.cpp  modal_aero_calcsize_sub.cpp  modal_aero_calcsize_sub_ptend.cpp  update_diameter_and_vol2num.cpp
src/validation/coagulation/: CMakeLists.txt  coag_1subarea.cpp  coag_aer_update.cpp  coag_num_update.cpp  coagulation_driver.cpp  getcoags.cpp  getcoags_wrapper_f.cpp
src/validation/convproc/: CMakeLists.txt  aer_vol_num_hygro.cpp  compute_activation_tend.cpp  compute_column_tendency.cpp  compute_downdraft_mixing_ratio.cpp  compute_ent_det_dp.cpp  compute_massflux.cpp  compute_midlev_height.cpp  compute_tendencies.cpp  compute_updraft_mixing_ratio.cpp  compute_wetdep_tend.cpp  compute_wup.cpp  convproc_driver.cpp  initialize_dcondt.cpp  initialize_tmr_array.cpp  ma_activate_convproc.cpp  ma_convproc_dp_intr.cpp  ma_convproc_tend.cpp  ma_precpevap.cpp  ma_precpevap_convproc.cpp  ma_precpprod.cpp  ma_resuspend_convproc.cpp  update_qnew_ptend.cpp  update_tendency_final.cpp
src/validation/drydep/: CMakeLists.txt  aero_model_drydep.cpp  air_dynamic_viscosity.cpp  air_kinematic_viscosity.cpp  calcram.cpp  compute_tendencies.cpp  drydep_driver.cpp  gravit_settling_velocity.cpp  modal_aero_depvel_part.cpp  modal_aero_gravit_settling_velocity.cpp  modal_aero_turb_drydep_velocity.cpp  radius_for_moment.cpp  schmidt_number.cpp  slip_correction_factor.cpp
src/validation/gas_chem/: CMakeLists.txt  adjrxt.cpp  gas_chem_driver.cpp  imp_prod_loss.cpp  imp_sol.cpp  indprd.cpp  linmat.cpp  newton_raphson_iter.cpp  nlnmat.cpp  setrxt.cpp  usrrxt.cpp
src/validation/gas_chem_driver/: CMakeLists.txt  atm_chem_N_microphysics.cpp  gas_chem_driver_driver.cpp
src/validation/gasaerexch/: CMakeLists.txt  gasaerexch_driver.cpp  gasaerexch_uptkrates_1box1gas.cpp  skywkr_gasaerexch_timestepping.cpp
src/validation/hetfrz/: CMakeLists.txt  hetfrz_calculate_cloudborne_aer_num.cpp  hetfrz_calculate_coated_fraction.cpp  hetfrz_calculate_collkernel_sub.cpp  hetfrz_calculate_hetfrz_contact_nucleation.cpp  hetfrz_calculate_hetfrz_deposition_nucleation.cpp  hetfrz_classnuc_calc.cpp  (+19 more)
(+196 files in other folders)
